Fix checkstyle violations in collector bundles
Change-Id: Id8a71768fd5b295bdd89e2175cbba577b4f839a1
Signed-off-by: Tom Pantelis <tompantelis@gmail.com>