@@ -9,9 +9,11 @@
 package org.opendaylight.tsdr.syslogs;
 
 import java.net.DatagramSocket;
+import java.net.SocketException;
+import java.util.ArrayList;
+import java.util.Deque;
 import java.util.LinkedList;
 import java.util.List;
-import org.opendaylight.controller.sal.binding.api.BindingAwareBroker;
 import org.opendaylight.tsdr.syslogs.filters.SyslogFilterManager;
 import org.opendaylight.tsdr.syslogs.server.SyslogTCPServer;
 import org.opendaylight.tsdr.syslogs.server.SyslogUDPServer;
@@ -20,7 +22,6 @@ import org.opendaylight.tsdr.syslogs.server.decoder.Message;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.controller.config.tsdr.collector.spi.rev150915.InsertTSDRLogRecordInputBuilder;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.controller.config.tsdr.collector.spi.rev150915.TsdrCollectorSpiService;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.controller.config.tsdr.collector.spi.rev150915.inserttsdrlogrecord.input.TSDRLogRecord;
-import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.controller.config.tsdr.syslog.collector.rev151007.TsdrSyslogCollectorService;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -33,48 +34,34 @@ import org.slf4j.LoggerFactory;
  * @author Kun Chen(kunch@tethrnet.com)
  **/
 public class TSDRSyslogCollectorImpl {
-    public static final int UDP_PORT = 514;
-    public static final int TCP_PORT = 6514;
     public static final long QUEUE_WAIT_INTERVAL = 2000;
     public static final long STORE_FLUSH_INTERVAL = 2500;
 
-    SyslogTCPServer tcpServer;
-    SyslogUDPServer udpServer;
+    private static final Logger LOG = LoggerFactory.getLogger(TSDRSyslogCollectorImpl.class);
 
-    private TsdrCollectorSpiService collectorSPIService = null;
-    private volatile boolean running = true;
-    private final Logger logger = LoggerFactory.getLogger(TSDRSyslogCollectorImpl.class);
-    private List<TSDRLogRecord> syslogQueue = new LinkedList<>();
-    private final List<Message> messageList = new LinkedList<>();
+    private final SyslogTCPServer tcpServer;
+    private final SyslogUDPServer udpServer;
+    private int udpPort;
+    private final int tcpPort;
+
+    private final TsdrCollectorSpiService collectorSPIService;
     private final SyslogFilterManager filterManager = new SyslogFilterManager();
-    private long lastPersisted = System.currentTimeMillis();
-    private int udpPort = UDP_PORT;
-    private int tcpPort = TCP_PORT;
-
     private final SyslogDatastoreManager manager;
-    private BindingAwareBroker.RpcRegistration<TsdrSyslogCollectorService> syslogsvrService;
 
-    @Override
-    protected Object clone() throws CloneNotSupportedException {
-        return super.clone();
-    }
+    private final Deque<Message> messageList = new LinkedList<>();
 
-    /***
-     * constructor of collector
-     *
-     * @param _collectorSPIService invoke collector SPI service to implement tsdr data insertion
-     */
-    public TSDRSyslogCollectorImpl(TsdrCollectorSpiService _collectorSPIService, SyslogDatastoreManager manager) {
-        this.collectorSPIService = _collectorSPIService;
+    private volatile boolean running = true;
+
+    public TSDRSyslogCollectorImpl(TsdrCollectorSpiService collectorSPIService, SyslogDatastoreManager manager,
+            int udpPort, int tcpPort) {
+        this.collectorSPIService = collectorSPIService;
         this.manager = manager;
-    }
 
-    public void setUdpPort(int udpPort) {
         this.udpPort = udpPort;
-    }
-
-    public void setTcpPort(int tcpPort) {
         this.tcpPort = tcpPort;
+
+        tcpServer = new SyslogTCPServer(messageList, this.manager);
+        udpServer = new SyslogUDPServer(messageList, this.manager);
     }
 
     public boolean isRunning() {
@@ -84,17 +71,15 @@ public class TSDRSyslogCollectorImpl {
     public void init() {
         new SyslogProcessor().start();
 
-        logger.info("Syslog Collector Session Initiated");
+        LOG.info("Syslog Collector Session Initiated");
 
         //Start TCP syslog server
-        logger.info("Start TCP server");
+        LOG.info("Start TCP server");
         try {
-            tcpServer = new SyslogTCPServer(this.messageList, this.manager);
-            tcpServer.setPort(tcpPort);
-            tcpServer.startServer();
-            logger.info("TCP server started at port: {}", tcpPort);
-        } catch (Exception e) {
-            logger.error("Error starting TCP srver on port {}", tcpPort, e);
+            tcpServer.startServer(tcpPort);
+            LOG.info("TCP server started at port: {}", tcpPort);
+        } catch (InterruptedException e) {
+            LOG.error("Error starting TCP srver on port {}", tcpPort, e);
             this.close();
         }
 
@@ -105,30 +90,28 @@ public class TSDRSyslogCollectorImpl {
             socket.close();
             socket = null;
             udpPortAvailable = true;
-        } catch (Exception e) {
-            logger.error("Port {} is not available for UDP, trying backup...", udpPort, e);
+        } catch (SocketException e) {
+            LOG.warn("Port {} is not available for UDP, trying backup...", udpPort, e);
             try {
                 udpPort += 1000;
                 DatagramSocket socket = new DatagramSocket(udpPort);
                 socket.close();
                 socket = null;
                 udpPortAvailable = true;
-            } catch (Exception err) {
+            } catch (SocketException e1) {
                 this.close();
-                logger.error("Port {} is not available, not starting servers!", udpPort, e);
+                LOG.error("Port {} is not available, not starting servers!", udpPort, e1);
             }
         }
 
         if (udpPortAvailable) {
             //Start UDP syslog server
-            logger.info("Start UDP server");
+            LOG.info("Start UDP server");
             try {
-                udpServer = new SyslogUDPServer(messageList, this.manager);
-                udpServer.setPort(udpPort);
-                udpServer.startServer();
-                logger.info("UDP server started at port {}", udpPort);
-            } catch (Exception e) {
-                logger.error("Failed to start UDP server on port {}", udpPort, e);
+                udpServer.startServer(udpPort);
+                LOG.info("UDP server started at port {}", udpPort);
+            } catch (InterruptedException e) {
+                LOG.error("Failed to start UDP server on port {}", udpPort, e);
             }
         }
     }
@@ -143,19 +126,20 @@ public class TSDRSyslogCollectorImpl {
                 udpServer.stopServer();
             }
         } catch (InterruptedException e) {
-            logger.error(e.getMessage());
+            LOG.error(e.getMessage());
         }
     }
 
     private class SyslogProcessor extends Thread {
-
-        public SyslogProcessor() {
+        SyslogProcessor() {
             super("TSDR Syslog Processor");
             this.setDaemon(true);
         }
 
         @Override
         public void run() {
+            List<TSDRLogRecord> syslogQueue = new ArrayList<>();
+            long lastPersisted = System.currentTimeMillis();
             Message message = null;
             while (running) {
                 synchronized (messageList) {
@@ -163,10 +147,11 @@ public class TSDRSyslogCollectorImpl {
                         try {
                             messageList.wait(QUEUE_WAIT_INTERVAL);
                         } catch (InterruptedException e) {
+                            // no-op
                         }
                     }
                     if (!messageList.isEmpty()) {
-                        message = messageList.remove(0);
+                        message = messageList.removeFirst();
                     }
                 }
 
@@ -183,7 +168,8 @@ public class TSDRSyslogCollectorImpl {
                         //Currently there is only one SyslogProcessor thread so this check seems meaningless
                         //If the future if we decide to have a few of those we need to make sure the queue
                         //has something and the interval has passed inside the synchronize block.
-                        if (System.currentTimeMillis() - lastPersisted > STORE_FLUSH_INTERVAL && !syslogQueue.isEmpty()) {
+                        if (System.currentTimeMillis() - lastPersisted > STORE_FLUSH_INTERVAL
+                                && !syslogQueue.isEmpty()) {
                             lastPersisted = System.currentTimeMillis();
                             queue = syslogQueue;
                             syslogQueue = new LinkedList<>();
